test/files/neg/t6340.check
t6340.scala:8: error: value c is not a member of object X
	import X.{a, b, c}
               ^
one error found
